--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/kennaruk/node-boilerplate.git",
   "author": "Nitipat Wuttisasiwat <k-e-n_ken@hotmail.com>",
   "license": "MIT",
+  "script: {
+    "dev": "nodemon src/index.js --exec babel-node"
+  },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.54",
     "@babel/core": "7.0.0-beta.54",
