--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"dev": "nodemon index.js --exec babel-node",
 		"build": "babel src/ -d dist",
-		"test": "cross-env NODE_ENV=test mocha --compilers js:@babel/register --timeout 10000 src/tests/*.js",
+		"test": "cross-env NODE_ENV=test mocha --require @babel/register --timeout 10000 src/tests/*.js",
 		"start": "node dist/bin/www.js"
 	},
   "devDependencies": {
